# zeroinstall-haskell-poc

./: Makefile  README.md  zeroinstall.cabal
ZeroInstall/: App.hs  Model.hs  Namespaces.hs  Run.hs  Selections.hs  Store.hs  Utils.hs
scripts/run/: Main.hs
src/: GpgTest.hs  feed.xml
src/ZeroInstall/: Model.hs  Utils.hs
src/ZeroInstall/Command/: Run.hs
